[package]
name = "complex-parser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.5.0"
num-complex = "0.4"
pest = { version = "2"}
pest_derive = { version = "2"}
# WASM連携のためのクレート
wasm-bindgen = "0.2.92"

# WASMでパニックした際にコンソールにエラーを出すためのクレート
console_error_panic_hook = { version = "0.1.7", optional = true }


[features]
default = ["console_error_panic_hook"]
